Add -lresolv too
git-svn-id: http://ns2/svnsrc/distro/ghostscript/ghostscript-9.06@2130 a03fbada-158d-47ef-9f12-77e997805b15

--- a/base/Makefile.in
+++ b/base/Makefile.in
@@ -391,7 +391,7 @@ EXTRALIBS=$(XTRALIBS) @LIBS@ @DYNAMIC_LIBS@ @FONTCONFIG_LIBS@ @FT_LIBS@
 # All reasonable platforms require -lm, but Rhapsody and perhaps one or
 # two others fold libm into libc and don't require any additional library.
 
-STDLIBS=@PTHREAD_LIBS@ -lm
+STDLIBS=@PTHREAD_LIBS@ -lm -lresolv
 
 # Define the include switch(es) for the X11 header files.
 # This can be null if handled in some other way (e.g., the files are
