Set CCAUX to /usr/bin/gcc to allow x compiling
git-svn-id: http://ns2/svnsrc/distro/ghostscript/ghostscript-9.06@2427 a03fbada-158d-47ef-9f12-77e997805b15

--- a/base/Makefile.in
+++ b/base/Makefile.in
@@ -317,7 +317,7 @@ RANLIB=@RANLIB@
 # Define the name of the C compiler (target and host (AUX))
 
 CC=@CC@
-CCAUX=@CC@
+CCAUX=/usr/bin/gcc
 
 # Define the name of the linker for the final link step.
 # Normally this is the same as the C compiler.
